load swisshash in the boot loader