@@ -12,9 +12,9 @@ import org.elasticsearch.gradle.internal.precommit.CheckForbiddenApisTask
 apply plugin: 'elasticsearch.build'
 
 dependencies {
-  implementation project(':server')
   implementation 'com.carrotsearch:hppc:0.8.1'
   implementation project(':libs:x-content')
+  implementation project(':server')
 
   testImplementation(project(":test:framework")) {
     exclude group: 'org.elasticsearch', module: 'swisshash'
@@ -25,10 +25,6 @@ tasks.named('compileJava').configure {
   options.compilerArgs << '--add-modules=jdk.incubator.vector'
   options.compilerArgs << '--add-reads=org.elasticsearch.swisshash=jdk.incubator.vector'
   options.compilerArgs -= '-Werror'
-}
-
-tasks.named('test').configure {
-  jvmArgs '--add-modules=jdk.incubator.vector'
 }
 
 tasks.named('javadoc').configure {
